--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
      <img src="assets/images/murdoch.jpeg"> 
     <div>
             <h2 id="about-me">About Me</h2>
-             <p> I am John Murdoch. You might remember me from the 1998 Sci-fi classic Dark City. When I'm not fighting intergalatic "strangers", I like to focus on full stack devlopment.
-                 My design philosophy is to focus on user experience and simplicity. I have a strong background in psychic kinetic manipulation, databases, infrastructure, continuous integration
+             <p> I am John Murdoch. You might remember me from the 1998 Sci-fi classic "Dark City". When I'm not fighting intergalatic "Strangers", I like to focus on full stack devlopment.
+                 My design philosophy is to focus on user experience, simplicity and building robust environments with an emphasis on scaleability. I have a strong background in psychic kinetic manipulation, databases, infrastructure, continuous integration
                  & deployment, automation, and monitoring.  My hobbies include:  space travel, low-gravity cycling, DJ'ing, programming, and reading any chance I get. </p>
              </div>
 
-    <div>
+    <div >
             <h2 id="work"> Work </h2>  
-            <p> here are images of my work</p>
-            <a href="https://kleppy.github.io/horiseon-web/www/index.html"> <img src="assets/images/horiseon-thumb.png" alt="thumbnail of horiseon project"></a>
+            
+            <a href="https://kleppy.github.io/horiseon-web/www/index.html"> <img src="assets/images/horiseon-thumb.png" alt="thumbnail of horiseon project" class="mywork"></a>
             </div>
 
     <div>   
-            <h2 id="contact">Contact</h2>
+            <h2 id="contact-me">Contact</h2>
             <p>jmurdoch@freedarkcity.local  phone: (019214)+555-555-5555 @foomurdoch </p>
     </div>
     <div>
