--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
                  My design philosophy is to focus on user experience, simplicity and building robust environments with an emphasis on scaleability. I have a strong background in psychic kinetic manipulation, databases, infrastructure, continuous integration
                  & deployment, automation, and monitoring.  My hobbies include:  space travel, low-gravity cycling, DJ'ing, programming, and reading any chance I get. </p>
              </div>
+             <h2 id="work"> Work </h2>  
+    <div class="image">
 
-    <div >
-            <h2 id="work"> Work </h2>  
-            
-            <a href="https://kleppy.github.io/horiseon-web/www/index.html"> <img src="assets/images/horiseon-thumb.png" alt="thumbnail of horiseon project" class="mywork"></a>
+            <a href="https://kleppy.github.io/horiseon-web/www/index.html"> <img src="assets/images/horiseon-thumb.png" alt="thumbnail of horiseon project"  width="200" length="200"></a>
+            <a href="https://kleppy.github.io/horiseon-web/www/index.html"> <img src="assets/images/horiseon-thumb.png" alt="thumbnail of horiseon project" width="200" length="200"></a>
+            <a href="https://kleppy.github.io/horiseon-web/www/index.html"> <img src="assets/images/horiseon-thumb.png" alt="thumbnail of horiseon project" width="200" length="200"></a>
+            <a href="https://kleppy.github.io/horiseon-web/www/index.html"> <img src="assets/images/horiseon-thumb.png" alt="thumbnail of horiseon project"  width="200" length="200"></a>
             </div>
 
     <div>   
             <h2 id="contact-me">Contact</h2>
-            <p>jmurdoch@freedarkcity.local  phone: (019214)+555-555-5555 @foomurdoch </p>
+            <p> email: jmurdoch@freedarkcity.local <br> phone: (019214)+555-555-5555 <br> @foomurdoch  </p>
     </div>
     <div>
             <h2 id="resume"> Resume</h2>
